Overflow-X corrected

--- a/css/style.css
+++ b/css/style.css
@@ -54,21 +54,25 @@
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   outline: none;
-  list-style: none; }
+  list-style: none;
+overflow-x: hidden; }
 
 body {
   color: #fff;
   background: #f8e7d8;
   line-height: 1.5;
   font-weight: 400;
-  overflow-x: hidden !important;
+  overflow-x: hidden;
   font-family: quicksand, sans-serif;
 }
 
-
+body img{
+  overflow-x: hidden;
+}
 img {
   width: 100%;
-  height: auto; }
+  height: auto;
+  overflow-x: hidden; }
 
 span, a, a:hover {
   display: inline-block;
@@ -4670,7 +4674,8 @@ footer{
   .container {
     max-width: 720px; }
   .navbar {
-    min-height: 60px; }
+    min-height: 60px;
+    max-width: 100vw; }
     .navbar .navbar-collapse {
       max-height: 340px;
       overflow: auto;
